Se modifico el buildspec para que las pruebas se ejecuten antes de contruir la imagen y si falla que se salga de la ejecucion y no cree la imagen docker

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   build:
     commands:
       - echo Running tests on `date`
-      - cd .\arkonproject\
+      - cd arkonproject  
       - pytest || exit 1  # Salir con código 1 si las pruebas fallan
       - cd ..
       - echo tests end on `date`
