--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,12 @@
 version: 0.2
 
 phases:
+  install:
+      commands:
+        - python -m venv venv
+        - source venv/bin/activate
+        - pip install -r requirements.txt 
+
   pre_build:
     commands:
       - echo Login in Amazon ECR....
@@ -12,7 +18,7 @@ phases:
     commands:
       - echo Running tests on `date`
       - cd arkonproject  
-      - pytest || exit 1  # Salir con código 1 si las pruebas fallan
+      - pytest
       - cd ..
       - echo tests end on `date`
       - echo Build completed on `date`
