Se hixo un cambio a la prueba unitaria test_hello para que fallara

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,7 @@ phases:
     commands:
       - echo Running tests on `date`
       - cd arkonproject  
-      - pytest
+      - pytest || exit 1  # Salir con código 1 si las pruebas fallan
       - cd ..
       - echo tests end on `date`
       - echo Build completed on `date`
