--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,7 @@ phases:
     commands:
       - echo Running tests on `date`
       - cd arkonproject  
-      - pytest || exit 1  # Salir con código 1 si las pruebas fallan
+      -  pytest || (pytest_output=$(pytest) && echo "$pytest_output" && exit 1)
       - cd ..
       - echo tests end on `date`
       - echo Build completed on `date`
