--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,10 @@ phases:
     commands:
       - echo Running tests on `date`
       - cd arkonproject  
-      -  pytest || (pytest_output=$(pytest) && echo "$pytest_output" && exit 1)
+      - pytest || exit_code=$?
+      - pytest_output=$(pytest)
+      - echo "$pytest_output"
+      - exit $exit_code
       - cd ..
       - echo tests end on `date`
       - echo Build completed on `date`
